ecmascript/parser/tests/test262-error-references/fail/8355671c9cafd876.js.stderr
error: Unexpected token Some(BinOp(Mod))
 --> $DIR/tests/test262-parser/fail/8355671c9cafd876.js:1:5
  |
1 | 1 / %
  |     ^

